belajar git mudah

--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
     <body>
         <p>Hello Semua, Saya sedang belajar Git</p>
         <p>GIT KPD3033</p>
+        <p>Hello Semua, Saya baharu belajar tentang GIT</p>
+        <P>GIT makin mudah</P>
     </body>
 </html>
