--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
     <head>
         <title>Belajar Git -Project 01</title>
+        <title>Belajar Git: Remote Repository</title>
     </head>
     <body>
         <p>Hello Semua, Saya sedang belajar Git</p>
         <p>GIT KPD3033</p>
-        <p>hi</p>
+        <p>Yay!sedang menggunakan remote repository</p>
     </body>
 </html>
